# Clean-Architecture-SwiftUI

./: .gitignore  README-vi.md  README.md
BaseApp.xcworkspace/: contents.xcworkspacedata
BaseApp.xcworkspace/xcuserdata/prank.xcuserdatad/: UserInterfaceState.xcuserstate
BaseApp.xcworkspace/xcuserdata/prank.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
BazelApp/BazelApp/: BazelAppApp.swift  ContentView.swift
BazelApp/BazelApp.xcodeproj/: project.pbxproj
BazelApp/BazelApp.xcodeproj/project.xcworkspace/xcuserdata/prank.xcuserdatad/: UserInterfaceState.xcuserstate
BazelApp/BazelAppTests/: BazelAppTests.swift
BazelApp/BazelAppUITests/: BazelAppUITests.swift  BazelAppUITestsLaunchTests.swift
Core/CoreData/CoreData/: CoreData.swift
Core/CoreData/CoreData.xcodeproj/: project.pbxproj
Core/CoreData/CoreData/CoreData.docc/: CoreData.md
Core/CoreData/CoreData/Sources/: NetworkManager.swift
Core/CoreData/CoreDataTests/: CoreDataTests.swift
Core/CoreDomain/CoreDomain/: CoreDomain.swift
Core/CoreDomain/CoreDomain.xcodeproj/: project.pbxproj
Core/CoreDomain/CoreDomain/CoreDomain.docc/: CoreDomain.md
Core/CoreDomain/CoreDomain/Sources/: Entities.swift
Core/CoreDomain/CoreDomainTests/: CoreDomainTests.swift
Core/CorePresentation/CorePresentation/: CorePresentation.swift
Core/CorePresentation/CorePresentation.xcodeproj/: project.pbxproj
Core/CorePresentation/CorePresentation/CorePresentation.docc/: CorePresentation.md
Core/CorePresentation/CorePresentation/Sources/: BaseComponents.swift
Core/CorePresentation/CorePresentationTests/: CorePresentationTests.swift
Features/Authentication/Authentication/: Authentication.swift
Features/Authentication/Authentication.xcodeproj/: project.pbxproj
Features/Authentication/AuthenticationTests/: AuthenticationTests.swift
Features/AuthenticationData/AuthenticationData/: AuthenticationData.swift
Features/AuthenticationData/AuthenticationData.xcodeproj/: project.pbxproj
Features/AuthenticationData/AuthenticationData/AuthenticationData.docc/: AuthenticationData.md
Features/AuthenticationData/AuthenticationDataTests/: AuthenticationDataTests.swift
Features/AuthenticationDomain/AuthenticationDomain/: AuthenticationDomain.swift
Features/AuthenticationDomain/AuthenticationDomain.xcodeproj/: project.pbxproj
Features/AuthenticationDomain/AuthenticationDomain/AuthenticationDomain.docc/: AuthenticationDomain.md
Features/AuthenticationDomain/AuthenticationDomainTests/: AuthenticationDomainTests.swift
Features/AuthenticationPresentation/AuthenticationPresentation/: AuthenticationPresentation.swift
Features/AuthenticationPresentation/AuthenticationPresentation.xcodeproj/: project.pbxproj
Features/AuthenticationPresentation/AuthenticationPresentation/AuthenticationPresentation.docc/: AuthenticationPresentation.md
Features/AuthenticationPresentation/AuthenticationPresentationTests/: AuthenticationPresentationTests.swift
Features/HomeFeed/HomeFeed/: HomeFeed.swift
Features/HomeFeed/HomeFeed.xcodeproj/: project.pbxproj
Features/HomeFeed/HomeFeed/HomeFeed.docc/: HomeFeed.md
Features/HomeFeed/HomeFeedTests/: HomeFeedTests.swift
Features/HomeFeedData/HomeFeedData/: HomeFeedData.swift
Features/HomeFeedData/HomeFeedData.xcodeproj/: project.pbxproj
Features/HomeFeedData/HomeFeedData/HomeFeedData.docc/: HomeFeedData.md
Features/HomeFeedData/HomeFeedDataTests/: HomeFeedDataTests.swift
Features/HomeFeedDomain/HomeFeedDomain/: HomeFeedDomain.swift
Features/HomeFeedDomain/HomeFeedDomain.xcodeproj/: project.pbxproj
Features/HomeFeedDomain/HomeFeedDomain/HomeFeedDomain.docc/: HomeFeedDomain.md
Features/HomeFeedDomain/HomeFeedDomain/Sources/: UseCases.swift
Features/HomeFeedDomain/HomeFeedDomainTests/: HomeFeedDomainTests.swift
Features/HomeFeedPresentation/HomeFeedPresentation/: HomeFeedPresentation.swift
Features/HomeFeedPresentation/HomeFeedPresentation.xcodeproj/: project.pbxproj
Features/HomeFeedPresentation/HomeFeedPresentation/HomeFeedPresentation.docc/: HomeFeedPresentation.md
Features/HomeFeedPresentation/HomeFeedPresentation/Sources/: HomeFeedViews.swift
Features/HomeFeedPresentation/HomeFeedPresentationTests/: HomeFeedPresentationTests.swift
ios-bazel-app/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
ios-bazel-app/App/: BUILD.bazel  Info.plist
ios-bazel-app/App/Sources/: BazelApp.swift
ios-bazel-app/Core/Data/: BUILD.bazel
ios-bazel-app/Core/Data/Sources/: NetworkManager.swift
ios-bazel-app/Core/Domain/: BUILD.bazel
ios-bazel-app/Core/Domain/Sources/: Entities.swift
ios-bazel-app/Core/Presentation/: BUILD.bazel
ios-bazel-app/Features/Authentication/: BUILD.bazel
ios-bazel-app/Features/Authentication/Data/: BUILD.bazel
ios-bazel-app/Features/Authentication/Data/Sources/: AuthenticationRepository.swift
ios-bazel-app/Features/Authentication/Domain/: BUILD.bazel
ios-bazel-app/Features/Authentication/Presentation/: BUILD.bazel
ios-bazel-app/Features/Authentication/Presentation/Sources/: AuthenticationViewModel.swift
ios-bazel-app/Features/HomeFeed/: BUILD.bazel
ios-bazel-app/Features/HomeFeed/Data/: BUILD.bazel
ios-bazel-app/Features/HomeFeed/Data/Sources/: PostRepository.swift
ios-bazel-app/Features/HomeFeed/Domain/: BUILD.bazel
ios-bazel-app/Features/HomeFeed/Presentation/: BUILD.bazel
ios-bazel-app/Features/HomeFeed/Presentation/Sources/: HomeFeedViewModel.swift  HomeFeedViews.swift
(+28 files in other folders)
