load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "AuthenticationData",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "AuthenticationData",
    visibility = ["//Features/Authentication:__subpackages__"],
    deps = [
        "//Core/Domain:CoreDomain",
        "//Core/Data:CoreData",
        "//Features/Authentication/Domain:AuthenticationDomain",
    ],
)
