load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "AuthenticationDomain",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "AuthenticationDomain",
    visibility = ["//Features/Authentication:__subpackages__"],
    deps = [
        "//Core/Domain:CoreDomain",
    ],
)
