load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "AuthenticationPresentation",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "AuthenticationPresentation",
    visibility = ["//Features/Authentication:__subpackages__"],
    deps = [
        "//Core/Domain:CoreDomain",
        "//Core/Presentation:CorePresentation",
        "//Features/Authentication/Domain:AuthenticationDomain",
        "//Features/Authentication/Data:AuthenticationData",
    ],
)
