load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "HomeFeedData",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "HomeFeedData",
    visibility = ["//Features/HomeFeed:__subpackages__"],
    deps = [
        "//Core/Domain:CoreDomain",
        "//Core/Data:CoreData",
        "//Features/HomeFeed/Domain:HomeFeedDomain",
    ],
)
