load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "HomeFeedPresentation",
    srcs = glob(["Sources/**/*.swift"]),
    module_name = "HomeFeedPresentation",
    visibility = ["//Features/HomeFeed:__subpackages__"],
    deps = [
        "//Core/Domain:CoreDomain",
        "//Core/Data:CoreData",
        "//Core/Presentation:CorePresentation",
        "//Features/HomeFeed/Domain:HomeFeedDomain",
        "//Features/HomeFeed/Data:HomeFeedData",
    ],
)
